# yagna-service-erigon

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  install_erigon.sh  install_provider.sh  network-checker.yml  requestor_agent_stub.py  turbogeth_payload.py  worker.py  yagna_erigon_manager.py
.github/: pull_request_template.md
.github/workflows/: linters.yml  rust-aarch64.yml
client/: .eslintrc  Makefile  README.md  cypress.json  package.json
client/cypress/integration/: DashboardPage.spec.js  (+1 more)
client/docker/: Dockerfile  default.conf.template  entrypoint.sh
client/e2e/: cypress.json  docker-compose.yml
client/public/: index.html
client/src/: index.tsx
erigon-runtime/: Cargo.toml
erigon-runtime/src/: main.rs
goth-tests/docker/: erigon-provider.Dockerfile  globals.json  presets.json  runtime-config.json  runtime-descriptor.json  supervisord.conf
requestor/: .pylintrc  README.md  TODO  erigolem_cli.py  gen_keystore.py  network_checker.Dockerfile  requestor_agent_stub.py  requirements.txt  run_erigon_service.py  run_server.py  run_service_manager.py  server.Dockerfile  server.py  stop.sh  test-requirements.txt  test.Dockerfile  utils.py  worker.py  yagna_and_server_init.sh  yagna_erigon_manager.py  yagna_init.sh
requestor/client/: .eslintrc  package.json
requestor/erigon_services/: __init__.py  erigon.py  erigon_payload.py  pseudo_erigon.py
requestor/server/: app.py  erigon_service.py  erigon_service_wrapper.py  settings.py  utils.py
requestor/service_manager/: __init__.py  service_manager.py  service_wrapper.py  worker.py  yagna_erigon_manager.py  yapapi_connector.py
requestor/services/: __init__.py  erigon.py  pseudo_erigon.py
requestor/static/: index.html
requestor/tests/: test_api.py  test_base_usage.py  test_message_verification.py  test_multi_user.py
ya-erigon-runtime/: Cargo.toml
ya-erigon-runtime/src/: main.rs
ya-runtime-basic-auth/: Cargo.toml  Makefile  runtime-descriptor-template.json
ya-runtime-basic-auth/example_config/: README.md
ya-runtime-basic-auth/example_config/plugins/: ya-runtime-erigon.json  ya-runtime-lhouse.json
ya-runtime-basic-auth/example_config/ya-provider/: presets.json
ya-runtime-basic-auth/example_config/ya-runtime-erigon/: ya-runtime-erigon.json
ya-runtime-basic-auth/example_config/ya-runtime-lhouse/: ya-runtime-lhouse.json
ya-runtime-erigon/: Cargo.toml  Makefile  runtime-descriptor-template.json
ya-runtime-erigon/src/: main.rs
(+89 files in other folders)
