[package]
name = "ya-erigon-runtime"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
repository = "https://github.com/golemfactory/yagna-service-erigon"
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-runtime-sdk = { version = "0.1", features = ["macros"] }

anyhow = "1.0"
futures = "0.3"
local_ipaddress = "0.1.3"
serde = { version = "^1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "process"] }

[patch.crates-io]
ya-runtime-sdk = { git = "https://github.com/golemfactory/ya-runtime-sdk.git", rev = "8b9ba5a7a71d919395e6fe54f9012bf6220728c8" }
