[package]
name = "ya-runtime-basic-auth"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
repository = "https://github.com/golemfactory/yagna-service-erigon"
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
ya-runtime-sdk = { version = "0.1.0", features = ["macros"] }

anyhow = "1.0"
custom_derive = "0.1.7"
enum_derive = "0.1.7"
futures = "0.3"
local_ipaddress = "0.1.3"
rand = "0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["io-std", "io-util", "fs", "rt-core", "rt-threaded", "macros", "process", "time"] }
