[package]
name = "ya-runtime-erigon"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
repository = "https://github.com/golemfactory/yagna-service-erigon"
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-runtime-sdk = { version = "0.1", features = ["macros"] }

anyhow = "1.0"
futures = "0.3"
local_ipaddress = "0.1.3"
rand = "0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["io-std", "io-util", "rt-core", "rt-threaded", "macros", "process", "time"] }

[patch.crates-io]
ya-runtime-sdk = { git = "https://github.com/golemfactory/ya-runtime-sdk.git", rev = "880efaf19111e71647dea23fd997ebf6edc6e3d7" }
